# cevapy

./: .gitignore  LICENSE  README.md  mise.toml  pyproject.toml
cevapy/: exceptions.py  main.py  sources.py
leagues/: README.md
leagues/afc/australia/: npl-vic.toml
wikifoot/: main.py  sources.py
